Get shorts not working issue is on sql function